--- a/Stock_Market_prediction.ipynb
+++ b/Stock_Market_prediction.ipynb
@@ -23,7 +23,6 @@
     "- **numpy as np**: For numerical computations and handling arrays. It is useful for mathematical functions and random number generation.\n",
     "- **matplotlib.pyplot as plt**: For data visualization. It allows us to create static, animated, and interactive plots.\n",
     "- **tensorflow as tf**: For building and training machine learning models, particularly useful for deep learning.\n",
-    "- **yfinance as yf**: For fetching historical stock price data from Yahoo Finance.\n",
     "\n",
     "The `%matplotlib inline` command is used to display Matplotlib plots directly within the Jupyter Notebook, making it easier to visualize the data and results.\n"
    ]
@@ -40,6 +39,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import tensorflow as tf\n",
+    "from ta.trend import cci,macd\n",
+    "from ta.volatility import BollingerBands\n",
+    "from ta.momentum import rsi,stochrsi_k,StochasticOscillator\n",
     "\n",
     "%matplotlib inline\n"
    ]
@@ -265,10 +267,7 @@
    "source": [
     "### Technical Indicators Overview\r\n",
     "\r\n",
-    "Below is a list of various technical indicators integrated with moving averages to predict market trend\n",
-    "s- **Open**: Opening price of the stock on a given trading day.\n",
-    "\n",
-    "- **Close**: Closing price of the stock on the same trading day.\n",
+    "Below is a list of various technical indicators integrated with moving averages to predict market tre\n",
     ":\r\n",
     "\r\n",
     "- **SMA (Simple Moving Average)**\r\n",
@@ -314,10 +313,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "789893e5-1564-4173-9245-a1b147aef792",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (3231804561.py, line 45)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 45\u001b[1;36m\u001b[0m\n\u001b[1;33m    df['stochastic_k'] = stochastic_oscillator.stoch()\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "def add_derived_features (df, ma_periods, ema_periods, momentum_periods, return_periods):\n",
     "    \"\"\"\n",
@@ -342,10 +350,29 @@
     "    # Exponential moving averages\n",
     "    for period in ema_periods:\n",
     "        df[f'EMA_{period}'] = df['Adj Close'].ewm(span=period, adjust=False).mean()\n",
+    "\n",
+    "    # Moving Average Convergence Divergence\n",
+    "    \n",
+    "    #calculating the indicator\n",
+    "    macd_indicator = MACD(df['Adj Close'], window_slow=26, window_fast=12, window_sign=9)\n",
+    "\n",
+    "    # Addind data to the DataFrame\n",
+    "    df['MACD'] = macd_indicator.macd()\n",
+    "    df['MACD_signal'] = macd_indicator.macd_signal()\n",
+    "    df['MACD_diff'] = macd_indicator.macd_diff()  \n",
+    "    \n",
+    "    \n",
     "    \n",
     "    # Stochastic Oscillator K\n",
-    "    df['Stochastic_k'] = (df['Close'] - df['Low'].rolling(window=14).min()) / \\\n",
-    "                         (df['High'].rolling(window=14).max() - df['Low'].rolling(window=14).min()) * 100\n",
+    "\n",
+    "    # Calculate the Stochastic %K\n",
+    "    # The window parameter defines the lookback period for calculating %K,\n",
+    "    # and smooth_window parameter is used for smoothing the %K line.\n",
+    "    stochastic_oscillator = ta.momentum.StochasticOscillator(high=df['High'], low=df['Low'], close=df['Adj Close'], window=14, smooth_window=3)\n",
+    "\n",
+    "    # Add the %K line to the DataFrame\n",
+    "    \n",
+    "    df['stochastic_k'] = stochastic_oscillator.stoch()\n",
     "    \n",
     "    # Commodity Channel Index (CCI)\n",
     "    TP = (df['High'] + df['Low'] + df['Close']) / 3\n",
@@ -393,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
