--- a/Stock_Market_prediction.ipynb
+++ b/Stock_Market_prediction.ipynb
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "04417ba0-7471-4449-9422-694aabdb335a",
    "metadata": {},
    "outputs": [],
@@ -1176,7 +1176,7 @@
     "\n",
     "    # Building the LSTM model\n",
     "    model = Sequential()\n",
-    "    model.add(Input(shape=(10, 25)))  # Explicitly defining the input layer\n",
+    "    model.add(Input(shape=(time_steps, num_features)))  # Explicitly defining the input layer\n",
     "    for i in range(n_layers):\n",
     "        return_sequences = True if i < n_layers - 1 else False\n",
     "        model.add(LSTM(n_neurons[i], activation='sigmoid', return_sequences=return_sequences))\n",
@@ -1197,28 +1197,11 @@
    "id": "ec95ef9d-bbb7-4a8d-82bc-d7ed84b707ac",
    "metadata": {},
    "source": [
-    "\n",
-    "to change\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Time Series Prediction with LSTM using Keras and TimeSeriesSplit\n",
-    "\n",
-    "This script sets up a predictive model using LSTM (Long Short-Term Memory) networks in Keras, tailored for time series data. The model is configured to predict stock prices based on historical data. Here are the key components and steps involved in the setup:\n",
-    "\n",
-    "### Model Configuration\n",
-    "- **LSTM Architecture**: The model consists of three LSTM layers, with each layer containing 50 neurons. A dropout rate of 0.2 is applied to prevent overfitting.\n",
-    "- **Optimization and Metrics**: The 'adam' optimizer is used for training, with 'accuracy' as the metric for evaluating model performance.\n",
-    "\n",
-    "### Model Training with Cross-Validation\n",
-    "- **TimeSeriesSplit**: To ensure the integrity of the temporal data sequence, `TimeSeriesSplit` from Scikit-learn is used. This method is particularly suited for time series data, as it respects the chronological order of the data, avoiding leakage between training and validation phases.\n",
-    "- **Training Process**: The model is trained and validated across 5 different sequential splits to ensure robustness and generalizability. This helps in understanding the model's performance across different time segments of the dataset.\n",
-    "\n",
-    "### Results\n",
-    "- The scores from each validation fold are recorded and the average score is computed to provide a holistic view of the model's performance.\n",
-    "\n",
-    "This setup provides a robust framework for developing and evaluating time series prediction models, ensuring that the temporal sequence and characteristics of the data are appropriately managed.\n"
+    "# LSTM Model Training and Evaluation\r\n",
+    "\r\n",
+    "In this cell, we define and train an LSTM model for time series prediction. The model consists of multiple LSTM layers with dropout regularization to prevent overfitting. The training process includes validation data to monitor model performance during training.\r\n",
+    "\r\n",
+    "After training, the model is evaluated on the test set to assess its accuracy.\r\n"
    ]
   },
   {
@@ -1403,6 +1386,16 @@
     "# Evaluate the model on the test set\n",
     "test_loss, test_accuracy = model.evaluate(X_test_transformed, y_test_transformed, verbose=1)\n",
     "print(f\"Test Accuracy: {test_accuracy}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55322594-ff7a-428c-897d-1f206217b6ab",
+   "metadata": {},
+   "source": [
+    "# Confusion Matrix for Model Predictions\r\n",
+    "\r\n",
+    "This cell generates and displays a confusion matrix to evaluate the model's predictions on the test set. The predicted classes are compared against the true labels, with each class representing a stock movement: `-1` for a decrease in stock value, `0` for little change, and `1` for an increase in stock value. The confusion matrix visualizes the number of correct and incorrect classifications for each of these classes.\r\n"
    ]
   },
   {
